<resources>
    <string name="app_name">DeveloperApp</string>
    <string name="take_photo">Take Photo</string>
    <string name="save_photo">Save Photo</string>
    <string name="folder">Choose Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="beta_version">Beta Version</string>
    <string name="add_glasses">Add Glasses</string>
    <string name="add_eye_lashes">Add Eye lashes</string>
    <string name="remove_glasses">Remove Glasses</string>
    <string name="change_camera">Change Camera</string>
    <string name="editor">Editor</string>
    <string name="select_image">Select Image</string>
    <string name="lips">Lips</string>
    <string name="ears">Ears</string>
</resources>