<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent_layout"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewEditor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@mipmap/ic_launcher"
        app:layout_constraintRight_toLeftOf="@id/vertical_centerline"
        app:layout_constraintLeft_toLeftOf="@id/parent_layout"
        app:layout_constraintBottom_toTopOf="@id/image_save_button"
        app:layout_constraintTop_toTopOf="@id/parent_layout"
        android:elevation="2dp"
        android:importantForAccessibility="no" />

    <ImageView
        android:id="@+id/imageViewDraw"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="3dp"
        app:layout_constraintRight_toLeftOf="@id/vertical_centerline"
        app:layout_constraintLeft_toLeftOf="@id/parent_layout"
        app:layout_constraintBottom_toTopOf="@id/image_save_button"
        app:layout_constraintTop_toTopOf="@id/parent_layout"
        android:importantForAccessibility="no" />

    <Button
        android:id="@+id/image_save_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="10dp"
        android:elevation="2dp"
        android:text="@string/save_photo"
        android:background="@mipmap/save"
        app:layout_constraintBottom_toBottomOf="@id/parent_layout"
        app:layout_constraintStart_toStartOf="@id/parent_layout"
        />

    <Button
        android:id="@+id/folder"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="10dp"
        android:elevation="2dp"
        android:text="@string/folder"
        android:background="@mipmap/folder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_save_button"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editors_layout"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="@id/parent_layout">

        <Button
            android:id="@+id/lips"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@mipmap/lips"
            android:elevation="4dp"
            android:text="@string/lips"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/glasses_add"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="50dp"
            android:background="@mipmap/glasses"
            android:elevation="4dp"
            android:text="@string/add_glasses"
            app:layout_constraintTop_toBottomOf="@id/lips"
            app:layout_constraintLeft_toLeftOf="@id/editors_layout" />

        <Button
            android:id="@+id/eye_lashes"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="50dp"
            android:background="@mipmap/eye_lash"
            android:elevation="4dp"
            android:text="@string/add_eye_lashes"
            app:layout_constraintTop_toBottomOf="@id/glasses_add"
            app:layout_constraintLeft_toLeftOf="@id/editors_layout" />

        <Button
            android:id="@+id/ears"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="50dp"
            android:background="@mipmap/ears"
            android:elevation="4dp"
            android:text="@string/ears"
            app:layout_constraintTop_toBottomOf="@id/eye_lashes"
            app:layout_constraintLeft_toLeftOf="@id/editors_layout"/>

        <Button
            android:id="@+id/beta_version"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="50dp"
            android:background="@mipmap/testing"
            android:elevation="4dp"
            android:text="@string/beta_version"
            app:layout_constraintTop_toBottomOf="@id/ears"
            app:layout_constraintLeft_toLeftOf="@id/editors_layout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_centerline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>